tests/ternary/invalid/ternary_assign.amu
s32 main() {
    s32 a = 2;
    s32 b = 1;
    if(a > b) a = 1 else a = 0;
    return a;
}